--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ahmad Fashich Azzuhri Ramadhani</title>
     <style>
         .toggle:not(:checked) ~ .flip-card__inner {
             transform: rotateY(0deg); /* Mengembalikan kartu ke posisi awal */
@@ -828,13 +828,19 @@
                         }
                      </code></pre>
                     </div>
+                   <div class="title">pre 1.2 Besok yaa lagi maintenance beliau ada tournament catur silakan menunggu atau pc ke +62 881-0365-01919 (Fashich) bisa direfresh apabila ada update terbaru</div>
                   </div>
                   <div class="flip-card__back">
-                     <div class="title">BinarySearch</div>
+                     <div class="title">Binary Search Besok yaa lagi maintenance beliau ada tournament catur silakan menunggu atau pc ke +62 881-0365-01919 (Fashich) bisa direfresh apabila ada update terbaru</div>
                   </div>
                </div>
             </label>
         </div>   
    </div>
+                                            <script>
+                                                alert("pake laptop yaa");
+                                                alert("lagi maintenance, kerjain seadanya yaa,");
+                                                alert("pre 1.1 sebener e masih ada revisi, tapi kalo gamau nunggu kerjain aja");
+                                            </script>
 </body>
 </html>
